--- a/vertx-gaia/vertx-co/src/document/serialized-form.html
+++ b/vertx-gaia/vertx-co/src/document/serialized-form.html
@@ -20,6 +20,7 @@
     }
 //-->
 
+
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -65,6 +66,7 @@
     allClassesLink.style.display = "none";
   }
   //-->
+
 
         </script>
     </div>
@@ -646,11 +648,11 @@
                         </li>
                     </ul>
                 </li>
-                <li class="blockList"><a name="com.fasterxml.jackson.databind.OrignialNamingStrategy">
+                <li class="blockList"><a name="com.fasterxml.jackson.databind.OriginalNamingStrategy">
                     <!--   -->
                 </a>
                     <h3>Class <a href="com/fasterxml/jackson/databind/OrignialNamingStrategy.html"
-                                 title="class in com.fasterxml.jackson.databind">com.fasterxml.jackson.databind.OrignialNamingStrategy</a>
+                                 title="class in com.fasterxml.jackson.databind">com.fasterxml.jackson.databind.OriginalNamingStrategy</a>
                         extends com.fasterxml.jackson.databind.PropertyNamingStrategy implements Serializable</h3>
                 </li>
                 <li class="blockList"><a name="com.fasterxml.jackson.databind.PropertyMetadata">
@@ -2156,6 +2158,7 @@
         <script type="text/javascript"><!--
 hljs.initHighlightingOnLoad();
 //-->
+
         </script>
     </div>
 </div>
@@ -2181,6 +2184,7 @@ hljs.initHighlightingOnLoad();
     allClassesLink.style.display = "none";
   }
   //-->
+
 
         </script>
     </div>
