--- a/vertx-pin/zero-rbac/src/document/overview-frame.html
+++ b/vertx-pin/zero-rbac/src/document/overview-frame.html
@@ -27,7 +27,7 @@
 <li><a href="cn/vertxup/rbac/service/accredit/package-frame.html" target="packageFrame">cn.vertxup.rbac.service.accredit</a></li>
 <li><a href="cn/vertxup/rbac/service/batch/package-frame.html" target="packageFrame">cn.vertxup.rbac.service.batch</a></li>
 <li><a href="cn/vertxup/rbac/service/business/package-frame.html" target="packageFrame">cn.vertxup.rbac.service.business</a></li>
-<li><a href="cn/vertxup/rbac/service/dwarf/package-frame.html" target="packageFrame">cn.vertxup.rbac.service.dwarf</a></li>
+<li><a href="cn/vertxup/rbac/service/dwarf/package-frame.html" target="packageFrame">io.vertx.tp.rbac.acl.dwarf</a></li>
 <li><a href="cn/vertxup/rbac/service/jwt/package-frame.html" target="packageFrame">cn.vertxup.rbac.service.jwt</a></li>
 <li><a href="cn/vertxup/rbac/service/login/package-frame.html" target="packageFrame">cn.vertxup.rbac.service.login</a></li>
 <li><a href="cn/vertxup/rbac/service/view/package-frame.html" target="packageFrame">cn.vertxup.rbac.service.view</a></li>
