--- a/vertx-pin/zero-rbac/src/document/allclasses-frame.html
+++ b/vertx-pin/zero-rbac/src/document/allclasses-frame.html
@@ -64,7 +64,7 @@
         <li><a href="cn/vertxup/rbac/service/login/CodeStub.html" target="classFrame"
                title="interface in cn.vertxup.rbac.service.login"><span class="interfaceName">CodeStub</span></a></li>
         <li><a href="cn/vertxup/rbac/service/dwarf/DataDwarf.html" target="classFrame"
-               title="interface in io.vertx.tp.rbac.acl.dwarf"><span class="interfaceName">DataDwarf</span></a></li>
+               title="interface in io.vertx.tp.rbac.acl.rapid"><span class="interfaceName">DataDwarf</span></a></li>
         <li><a href="io/vertx/tp/rbac/DataLoader.html" target="classFrame"
                title="class in io.vertx.tp.rbac">DataLoader</a></li>
         <li><a href="io/vertx/tp/rbac/extension/DataRegion.html" target="classFrame"
