--- a/vertx-pin/zero-rbac/src/document/allclasses-noframe.html
+++ b/vertx-pin/zero-rbac/src/document/allclasses-noframe.html
@@ -62,7 +62,7 @@
         </li>
         <li><a href="cn/vertxup/rbac/service/login/CodeStub.html"
                title="interface in cn.vertxup.rbac.service.login"><span class="interfaceName">CodeStub</span></a></li>
-        <li><a href="cn/vertxup/rbac/service/dwarf/DataDwarf.html" title="interface in io.vertx.tp.rbac.acl.dwarf"><span
+        <li><a href="cn/vertxup/rbac/service/dwarf/DataDwarf.html" title="interface in io.vertx.tp.rbac.acl.rapid"><span
                 class="interfaceName">DataDwarf</span></a></li>
         <li><a href="io/vertx/tp/rbac/DataLoader.html" title="class in io.vertx.tp.rbac">DataLoader</a></li>
         <li><a href="io/vertx/tp/rbac/extension/DataRegion.html"
