--- a/vertx-pin/zero-rbac/src/document/io/vertx/tp/rbac/cv/em/package-use.html
+++ b/vertx-pin/zero-rbac/src/document/io/vertx/tp/rbac/cv/em/package-use.html
@@ -21,6 +21,7 @@
 //-->
 
 
+
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -49,9 +50,11 @@
         <script type="text/javascript">
                                              hljs.initHighlightingOnLoad();
 
+
         </script>
         <style type="text/css">
                                          body{                                 font-family: "Verdana"                             }                             code{                                 font-size: 13px;                                 font-family: "PT Mono","Menlo","Monaco";                             }                             div.block {                                 font-family: "JetBrains Mono","Verdana", Georgia, "Times New Roman", Times, serif;                             }                             div.block pre .java{                                 background-color:#f8f8f8;                             }                             li.blockList > pre {                                 font-size: 14px;                             }                             .bar{                                 font-size: 13px!important;                             }
+
 
         </style>
     </div>
@@ -80,6 +83,7 @@
   //-->
 
 
+
         </script>
     </div>
     <a name="skip.navbar.top">
@@ -103,7 +107,7 @@
                 </tr>
                 <tbody>
                 <tr class="altColor">
-                    <td class="colFirst"><a href="#io.vertx.tp.rbac.acl.dwarf">io.vertx.tp.rbac.acl.dwarf</a></td>
+                    <td class="colFirst"><a href="#io.vertx.tp.rbac.acl.rapid">io.vertx.tp.rbac.acl.rapid</a></td>
                     <td class="colLast">&nbsp;</td>
                 </tr>
                 <tr class="rowColor">
@@ -113,13 +117,13 @@
                 </tbody>
             </table>
         </li>
-        <li class="blockList"><a name="io.vertx.tp.rbac.acl.dwarf">
+        <li class="blockList"><a name="io.vertx.tp.rbac.acl.rapid">
             <!--   -->
         </a>
             <table border="0" cellpadding="3" cellspacing="0" class="useSummary"
                    summary="Use table, listing classes, and an explanation">
                 <caption><span>Classes in <a href="../../../../../../io/vertx/tp/rbac/cv/em/package-summary.html">io.vertx.tp.rbac.cv.em</a> used by <a
-                        href="../../../../../../cn/vertxup/rbac/service/dwarf/package-summary.html">io.vertx.tp.rbac.acl.dwarf</a></span><span
+                        href="../../../../../../cn/vertxup/rbac/service/dwarf/package-summary.html">io.vertx.tp.rbac.acl.rapid</a></span><span
                         class="tabEnd">&nbsp;</span></caption>
                 <tr>
                     <th class="colOne" scope="col">Class and Description</th>
@@ -127,7 +131,7 @@
                 <tbody>
                 <tr class="altColor">
                     <td class="colOne"><a
-                            href="../../../../../../io/vertx/tp/rbac/cv/em/class-use/RegionType.html#io.vertx.tp.rbac.acl.dwarf">RegionType</a>&nbsp;
+                            href="../../../../../../io/vertx/tp/rbac/cv/em/class-use/RegionType.html#io.vertx.tp.rbac.acl.rapid">RegionType</a>&nbsp;
                     </td>
                 </tr>
                 </tbody>
@@ -199,6 +203,7 @@
 hljs.initHighlightingOnLoad();
 //-->
 
+
         </script>
     </div>
 </div>
@@ -224,6 +229,7 @@ hljs.initHighlightingOnLoad();
     allClassesLink.style.display = "none";
   }
   //-->
+
 
 
         </script>
