--- a/vertx-pin/zero-rbac/src/document/overview-tree.html
+++ b/vertx-pin/zero-rbac/src/document/overview-tree.html
@@ -21,6 +21,7 @@
 //-->
 
 
+
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -49,9 +50,11 @@
         <script type="text/javascript">
                                              hljs.initHighlightingOnLoad();
 
+
         </script>
         <style type="text/css">
                                          body{                                 font-family: "Verdana"                             }                             code{                                 font-size: 13px;                                 font-family: "PT Mono","Menlo","Monaco";                             }                             div.block {                                 font-family: "JetBrains Mono","Verdana", Georgia, "Times New Roman", Times, serif;                             }                             div.block pre .java{                                 background-color:#f8f8f8;                             }                             li.blockList > pre {                                 font-size: 14px;                             }                             .bar{                                 font-size: 13px!important;                             }
+
 
         </style>
     </div>
@@ -80,6 +83,7 @@
   //-->
 
 
+
         </script>
     </div>
     <a name="skip.navbar.top">
@@ -105,7 +109,7 @@
         <li><a href="cn/vertxup/rbac/service/accredit/package-tree.html">cn.vertxup.rbac.service.accredit</a>,</li>
         <li><a href="cn/vertxup/rbac/service/batch/package-tree.html">cn.vertxup.rbac.service.batch</a>,</li>
         <li><a href="cn/vertxup/rbac/service/business/package-tree.html">cn.vertxup.rbac.service.business</a>,</li>
-        <li><a href="cn/vertxup/rbac/service/dwarf/package-tree.html">io.vertx.tp.rbac.acl.dwarf</a>,</li>
+        <li><a href="cn/vertxup/rbac/service/dwarf/package-tree.html">io.vertx.tp.rbac.acl.rapid</a>,</li>
         <li><a href="cn/vertxup/rbac/service/jwt/package-tree.html">cn.vertxup.rbac.service.jwt</a>,</li>
         <li><a href="cn/vertxup/rbac/service/login/package-tree.html">cn.vertxup.rbac.service.login</a>,</li>
         <li><a href="cn/vertxup/rbac/service/view/package-tree.html">cn.vertxup.rbac.service.view</a>,</li>
@@ -1059,8 +1063,8 @@
         <li type="circle">cn.vertxup.rbac.service.login.<a href="cn/vertxup/rbac/service/login/CodeStub.html"
                                                            title="interface in cn.vertxup.rbac.service.login"><span
                 class="typeNameLink">CodeStub</span></a></li>
-        <li type="circle">io.vertx.tp.rbac.acl.dwarf.<a href="cn/vertxup/rbac/service/dwarf/DataDwarf.html"
-                                                        title="interface in io.vertx.tp.rbac.acl.dwarf"><span
+        <li type="circle">io.vertx.tp.rbac.acl.rapid.<a href="cn/vertxup/rbac/service/dwarf/DataDwarf.html"
+                                                        title="interface in io.vertx.tp.rbac.acl.rapid"><span
                 class="typeNameLink">DataDwarf</span></a></li>
         <li type="circle">cn.vertxup.rbac.api.<a href="cn/vertxup/rbac/api/GroupAgent.html"
                                                  title="interface in cn.vertxup.rbac.api"><span class="typeNameLink">GroupAgent</span></a>
@@ -1239,6 +1243,7 @@
 hljs.initHighlightingOnLoad();
 //-->
 
+
         </script>
     </div>
 </div>
@@ -1264,6 +1269,7 @@ hljs.initHighlightingOnLoad();
     allClassesLink.style.display = "none";
   }
   //-->
+
 
 
         </script>
