--- a/vertx-pin/zero-rbac/src/document/overview-summary.html
+++ b/vertx-pin/zero-rbac/src/document/overview-summary.html
@@ -21,6 +21,7 @@
 //-->
 
 
+
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -49,9 +50,11 @@
         <script type="text/javascript">
                                              hljs.initHighlightingOnLoad();
 
+
         </script>
         <style type="text/css">
                                          body{                                 font-family: "Verdana"                             }                             code{                                 font-size: 13px;                                 font-family: "PT Mono","Menlo","Monaco";                             }                             div.block {                                 font-family: "JetBrains Mono","Verdana", Georgia, "Times New Roman", Times, serif;                             }                             div.block pre .java{                                 background-color:#f8f8f8;                             }                             li.blockList > pre {                                 font-size: 14px;                             }                             .bar{                                 font-size: 13px!important;                             }
+
 
         </style>
     </div>
@@ -78,6 +81,7 @@
     allClassesLink.style.display = "none";
   }
   //-->
+
 
 
         </script>
@@ -156,7 +160,7 @@
         </tr>
         <tr class="altColor">
             <td class="colFirst"><a
-                    href="cn/vertxup/rbac/service/dwarf/package-summary.html">io.vertx.tp.rbac.acl.dwarf</a>
+                    href="cn/vertxup/rbac/service/dwarf/package-summary.html">io.vertx.tp.rbac.acl.rapid</a>
             </td>
             <td class="colLast">&nbsp;</td>
         </tr>
@@ -292,6 +296,7 @@
 hljs.initHighlightingOnLoad();
 //-->
 
+
         </script>
     </div>
 </div>
@@ -317,6 +322,7 @@ hljs.initHighlightingOnLoad();
     allClassesLink.style.display = "none";
   }
   //-->
+
 
 
         </script>
