--- a/vertx-pin/zero-rbac/src/document/serialized-form.html
+++ b/vertx-pin/zero-rbac/src/document/serialized-form.html
@@ -21,6 +21,7 @@
 //-->
 
 
+
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -49,9 +50,11 @@
         <script type="text/javascript">
                                              hljs.initHighlightingOnLoad();
 
+
         </script>
         <style type="text/css">
                                          body{                                 font-family: "Verdana"                             }                             code{                                 font-size: 13px;                                 font-family: "PT Mono","Menlo","Monaco";                             }                             div.block {                                 font-family: "JetBrains Mono","Verdana", Georgia, "Times New Roman", Times, serif;                             }                             div.block pre .java{                                 background-color:#f8f8f8;                             }                             li.blockList > pre {                                 font-size: 14px;                             }                             .bar{                                 font-size: 13px!important;                             }
+
 
         </style>
     </div>
@@ -78,6 +81,7 @@
     allClassesLink.style.display = "none";
   }
   //-->
+
 
 
         </script>
@@ -2554,12 +2558,12 @@
             </ul>
         </li>
         <li class="blockList">
-            <h2 title="Package">Package&nbsp;io.vertx.tp.rbac.acl.dwarf</h2>
+            <h2 title="Package">Package&nbsp;io.vertx.tp.rbac.acl.rapid</h2>
             <ul class="blockList">
-                <li class="blockList"><a name="io.vertx.tp.rbac.acl.dwarf.ZERO">
+                <li class="blockList"><a name="io.vertx.tp.rbac.acl.rapid.ZERO">
                     <!--   -->
                 </a>
-                    <h3>Class io.vertx.tp.rbac.acl.dwarf.ZERO extends <a
+                    <h3>Class io.vertx.tp.rbac.acl.rapid.ZERO extends <a
                             href="https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html?is-external=true"
                             title="class or interface in java.lang">Object</a> implements Serializable</h3>
                 </li>
@@ -3149,6 +3153,7 @@
 hljs.initHighlightingOnLoad();
 //-->
 
+
         </script>
     </div>
 </div>
@@ -3174,6 +3179,7 @@ hljs.initHighlightingOnLoad();
     allClassesLink.style.display = "none";
   }
   //-->
+
 
 
         </script>
