--- a/vertx-gaia/vertx-co/src/document/io/vertx/up/commune/config/DualItem.html
+++ b/vertx-gaia/vertx-co/src/document/io/vertx/up/commune/config/DualItem.html
@@ -102,7 +102,7 @@ var activeTableTab = "activeTableTab";
 <li><a href="https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html?is-external=true" title="class or interface in java.lang">java.lang.Object</a></li>
 <li>
 <ul class="inheritance">
-<li>io.vertx.up.commune.config.DualItem</li>
+<li>io.vertx.up.commune.exchange.DualItem</li>
 </ul>
 </li>
 </ul>
@@ -120,7 +120,7 @@ extends <a href="https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html
 implements <a href="https://docs.oracle.com/javase/8/docs/api/java/io/Serializable.html?is-external=true" title="class or interface in java.io">Serializable</a></pre>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
-<dd><a href="../../../../../serialized-form.html#io.vertx.up.commune.config.DualItem">Serialized Form</a></dd>
+<dd><a href="../../../../../serialized-form.html#io.vertx.up.commune.exchange.DualItem">Serialized Form</a></dd>
 </dl>
 </li>
 </ul>
